[package]
name = "plugin_panoramic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
image = "0.25.1"
kamadak-exif = "0.5.5"
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
plugin_interface = { path = "../plugin_interface", version = "*" }



[[bin]]
name = "pbuildtool"
path="src/main.rs"
