[package]
name = "plugin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
plugin_interface = { path = "../plugin_interface", version = "*" }
tobj = "4.0.2"
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
kiddo = "4.2.0"
itertools = "0.13.0"


[lib]
crate-type = ["cdylib"]



